# rascl

./: .gitignore
mc_cpp/: Dockerfile  README.md  Useful commands.txt  apt_requirements  test.py
mc_cpp/.devcontainer/: .bash_history
mc_cpp/doc/: CANopenHelper_statusword.html  SOEM API — SOEM documentation.htm
mc_cpp/doc/SOEM API — SOEM documentation-Dateien/: api_reference.135e8a3e-ef53-4573-96cf-bcb57a1b235a.js
mc_cpp/log/: latest_build
mc_cpp/src/motorctl_cpp/src/: master.cpp  slave.cpp
rascl_hqm/: Dockerfile  README.md  rosws.sh  turtlesim.yaml
rascl_hqm/.devcontainer/: .bash_history
rascl_hqm/log/: latest_build
rascl_hqm/src/: package.xml  setup.cfg  setup.py
rascl_hqm/src/rascl_clock/: listener.py  talker.py
rascl_hqm/tutorial/.devcontainer/: .bash_history
rascl_hqm/tutorial/ros2_ws/install/: local_setup.sh  setup.sh
rascl_hqm/tutorial/ros2_ws/log/: latest_build  latest_test
rascl_hqm/tutorial/ros2_ws3/install/: local_setup.sh  setup.sh
rascl_hqm/tutorial/ros2_ws3/log/: latest_build
rascl_hqm/tutorial/ros2_ws4/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
rascl_hqm/tutorial/ros2_ws4/log/: latest_build
rascl_hqm/tutorial/ros2_ws6/install/: local_setup.sh  setup.sh
rascl_hqm/tutorial/ros2_ws6/log/: latest_build
rascl_hqm/tutorial/ws7/install/: local_setup.sh  setup.sh
rascl_hqm/tutorial/ws7/log/: latest_build
rascl_ros2_control/: .gitignore  Dockerfile  README.md  Useful commands.txt  apt_requirements  rosws.sh
rascl_ros2_control/src/rascl_automation_ws2526_group1/: package.xml  readme_task1_and_2.md  setup.cfg  setup.py
rascl_ros2_control/src/rascl_automation_ws2526_group1/launch/: automation_tsk1.launch.py  automation_tsk2.launch.py  rtb_test.launch.py  (+2 more)
rascl_ros2_control/src/rascl_description/: CMakeLists.txt  package.xml
rascl_ros2_control/src/rascl_hardware_interface/: CMakeLists.txt  package.xml  rascl_hardware_interface.xml
rascl_ros2_control/src/rascl_hardware_interface/include/rascl_hardware_interface/: rascl_hardware_interface.hpp
rascl_ros2_control/src/rascl_hardware_interface/src/: rascl_hardware_interface.cpp
rascl_ros2_control/src/rascl_hardware_interface/test/: test_load_rascl_hardware_interface.cpp
single_motor/: Dockerfile  Useful commands.txt  rosws.sh
single_motor/.devcontainer/: .bash_history
single_motor/log/: latest_build
single_motor/src/motorctl_cpp/: CMakeLists.txt
(+331 files in other folders)
